--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ runner.temp }}/gcp-key.json
         run: |
           echo "${{ secrets.GCP_SA_KEY }}" > $GOOGLE_APPLICATION_CREDENTIALS
-          gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
+          gcloud auth activate-service-account 831403237519-compute@developer.gserviceaccount.com --key-file=$GOOGLE_APPLICATION_CREDENTIALS
           gcloud config set project project-insomniacs  # Replace with your project ID
 
       - name: Copy files to GCP VM
