--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,47 @@
 name: Deploy FastAPI to GCP VM
-
 on:
   push:
     branches:
-      - main  # Trigger on the main branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'  # Match the Python version on your GCP VM
-
+          python-version: '3.9'
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Authenticate with Google Cloud
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ runner.temp }}/gcp-key.json
-        run: |
-          echo "${{ secrets.GCP_SA_KEY }}" > $GOOGLE_APPLICATION_CREDENTIALS
-          gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
-          gcloud config set project project-insomniacs  # Replace with your project ID
-
+      
+      - name: Setup GCloud Auth
+        id: auth
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: project-insomniacs
+          
       - name: Copy files to GCP VM
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ runner.temp }}/gcp-key.json
-        run: |
-          VM_IP=34.69.164.156  # Replace with your GCP VM IP
-          VM_USER=instance-20241103-080640  # Replace with your VM username
-          APP_DIR=/home/mashovi06/app  # Destination on VM
-
-          gcloud compute ssh $VM_USER@$VM_IP --command "mkdir -p $APP_DIR"
-          gcloud compute scp --recurse ./* $VM_USER@$VM_IP:$APP_DIR
-
-      - name: Restart FastAPI Service
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ runner.temp }}/gcp-key.json
         run: |
           VM_IP=34.69.164.156
-          VM_USER=instance-20241103-080640  # Replace with your VM username
-
+          VM_USER=instance-20241103-080640
+          APP_DIR=/home/mashovi06/app
+          gcloud compute ssh $VM_USER@$VM_IP --command "mkdir -p $APP_DIR"
+          gcloud compute scp --recurse ./* $VM_USER@$VM_IP:$APP_DIR
+          
+      - name: Restart FastAPI Service
+        run: |
+          VM_IP=34.69.164.156
+          VM_USER=instance-20241103-080640
           gcloud compute ssh $VM_USER@$VM_IP --command "sudo systemctl restart fastapi"
