--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,22 +34,20 @@ jobs:
           
       - name: Copy files to GCP VM
         run: |
-          VM_IP=34.69.164.156
-          VM_USER=instance-20241103-080640
+          INSTANCE_NAME=instance-20241103-080640
           VM_ZONE=us-central1-a  # Replace with your VM's zone
           APP_DIR=/home/mashovi06/app
           
-          # Create directory with zone specified
-          gcloud compute ssh $VM_USER@$VM_IP --zone=$VM_ZONE --command "mkdir -p $APP_DIR"
+          # Create directory with instance name
+          gcloud compute ssh $INSTANCE_NAME --zone=$VM_ZONE --command "mkdir -p $APP_DIR"
           
-          # Copy files with zone specified
-          gcloud compute scp --zone=$VM_ZONE --recurse ./* $VM_USER@$VM_IP:$APP_DIR
+          # Copy files with instance name
+          gcloud compute scp --zone=$VM_ZONE --recurse ./* $INSTANCE_NAME:$APP_DIR
           
       - name: Restart FastAPI Service
         run: |
-          VM_IP=34.69.164.156
-          VM_USER=instance-20241103-080640
+          INSTANCE_NAME=instance-20241103-080640
           VM_ZONE=us-central1-a  # Replace with your VM's zone
           
-          # Restart service with zone specified
-          gcloud compute ssh $VM_USER@$VM_IP --zone=$VM_ZONE --command "sudo systemctl restart fastapi"
+          # Restart service with instance name
+          gcloud compute ssh $INSTANCE_NAME --zone=$VM_ZONE --command "sudo systemctl restart fastapi"
